<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/course"
    android:fitsSystemWindows="true">
<LinearLayout
    android:id="@+id/admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:context=".CourseActivity">

    <TextView
        android:id="@+id/et_course_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/course_registration"
        android:textColor="#FFFF00"
        android:shadowColor="#00FF00"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_course_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_the_course_you_want_to_enroll_in"
        android:textColor="#18FFFF"
        android:shadowColor="#00FF00"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <CheckBox
        android:id="@+id/cb_course_python"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/introduction_to_python"
        android:textColor="#FFFF00"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_course_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/c_programming"
        android:textColor="#FFEA00"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_course_cp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/competitive_programming"
        android:textColor="#C6FF00"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_course_java"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/object_oriented_programming"
        android:textColor="#C6FF00"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_course_dld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/digital_logic_design"
        android:textColor="#FFFF00"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_course_math"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/number_theory"
        android:textColor="#FFFF00"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_course_dbms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/database_management_system"
        android:textColor="#FFFF00"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/android_app_development"
        android:textColor="#FFFF00"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_course_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="#FFD700"
        android:text="@string/submit"
        android:textColor="#141313" />

    <TextView
        android:id="@+id/et_course_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/for_details_about_courses"
        android:textColor="#1DE9B6"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_course_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="300dp"
        android:backgroundTint="#FFFF00"
        android:text="@string/click_here"
        android:textColor="#FF5252" />

</LinearLayout>
</ScrollView>